[package]
name = "rustydht-lib"
version = "0.1.0"
authors = ["raptorswing"]
edition = "2018"
description = "A library for interacting with BitTorrent's mainline DHT."
license = "MIT"
repository = "https://github.com/raptorswing/rustydht-lib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
crc = "^1.0.0"
futures = "0.3.13"
hex = "0.4"
log = "0.4"
lru = "0.6.5"
rand = "0.8.0"
serde_bencode = "^0.2.3"
serde = { version = "^1.0.0", features = ["derive"] }
serde_bytes = "0.11"
serde_derive = "^1.0.0"
thiserror = "1.0.25"
tokio = { version = "1", features = ["rt","net", "time", "macros", "sync"] }
tracing-mutex = "0.1"

[dev-dependencies]
lazy_static = "1.4.0"
rand_chacha = "0.3.0"